zavlazovac/error.txt
Arduino: 1.8.2 (Windows 10), Vıvojová doska:"Arduino Nano, ATmega168"

Warning: Board breadboard:avr:atmega328bb doesn't define a 'build.board' preference. Auto-set to: AVR_ATMEGA328BB
C:\Users\Matus Kavec\Desktop\2048\zavlazovac\zavlazovac.ino: In function 'int main()':

zavlazovac:47: error: 'lcd' was not declared in this scope

     lcd.setCursor(0, 0);

     ^

zavlazovac:52: error: 'lcd' was not declared in this scope

     lcd.setCursor(0, 0);

     ^

exit status 1
'lcd' was not declared in this scope

Táto správa by mala ma viac informácií v
"Zobrazenie podrobného vıstupu pri kompilácii"
pod¾a zapnutá vo¾ba v Súbor -> Nastavenia.
